--- a/index.html
+++ b/index.html
@@ -19,20 +19,24 @@
       <nav>
         <a href="#" class="logo"><span class="logo-web">Web</span>Studio</a>
         <ul>
-          <li><a href="index.html" class="nav-item header-item">Студія</a></li>
-          <li>
+          <li class="list">
+            <a href="index.html" class="nav-item header-item">Студія</a>
+          </li>
+          <li class="list">
             <a href="portfolio.html" class="nav-item header-item">Портфоліо</a>
           </li>
-          <li><a href="#" class="nav-item header-item">Контакти</a></li>
+          <li class="list">
+            <a href="#" class="nav-item header-item">Контакти</a>
+          </li>
         </ul>
       </nav>
       <ul>
-        <li>
+        <li class="list">
           <a href="mailto:info@devstudio.com" class="header-item"
             >info@devstudio.com</a
           >
         </li>
-        <li>
+        <li class="list">
           <a href="tel:+380961111111" class="header-item">+380961111111</a>
         </li>
       </ul>
@@ -45,29 +49,29 @@
       <section class="features-section">
         <h2 class="heading-secondary">Наші переваги</h2>
         <ul>
-          <li>
-            <h3 class="heading-features">УВАГА ДО ДЕТАЛЕЙ</h3>
-            <p class="text-features">
+          <li class="list">
+            <h3 class="features-heading">УВАГА ДО ДЕТАЛЕЙ</h3>
+            <p class="features-text">
               Ідейні міркування, і навіть початок повсякденної роботи з
               формування позиції.
             </p>
           </li>
-          <li>
-            <h3 class="heading-features">ПУНКТУАЛЬНІСТЬ</h3>
-            <p class="text-features">
+          <li class="list">
+            <h3 class="features-heading">ПУНКТУАЛЬНІСТЬ</h3>
+            <p class="features-text">
               Завдання організації, особливо рамки і місце навчання кадрів тягне
               у себе.
             </p>
           </li>
-          <li>
-            <h3 class="heading-features">ПЛАНУВАННЯ</h3>
-            <p class="text-features">
+          <li class="list">
+            <h3 class="features-heading">ПЛАНУВАННЯ</h3>
+            <p class="features-text">
               Так само консультація з широким активом значною мірою зумовлює.
             </p>
           </li>
-          <li>
-            <h3 class="heading-features">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
-            <p class="text-features">
+          <li class="list">
+            <h3 class="features-heading">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
+            <p class="features-text">
               Значимість цих проблем настільки очевидна, що реалізація планових
               завдань.
             </p>
@@ -76,21 +80,21 @@
 
         <h2 class="heading-secondary">Чим ми займаємося</h2>
         <ul>
-          <li>
+          <li class="list">
             <img
               src="images/image-1.jpg"
               width="370"
               alt="The working space of a programmer"
             />
           </li>
-          <li>
+          <li class="list">
             <img
               src="images/image-2.jpg"
               width="370"
               alt="A designer working on a project"
             />
           </li>
-          <li>
+          <li class="list">
             <img
               src="images/image-3.jpg"
               alt="A color palette on a tablette screen"
@@ -102,41 +106,41 @@
       <section class="team-section">
         <h2 class="heading-secondary">Наша команда</h2>
         <ul>
-          <li>
+          <li class="list">
             <img
               src="images/photo-1.jpg"
               width="270"
               alt="Фото дизайнера Ігора Дем'яненка"
             />
-            <h3 class="heading-team">Ігор Дем'яненко</h3>
-            <p class="text-team">Product Designer</p>
+            <h3 class="team-heading">Ігор Дем'яненко</h3>
+            <p class="team-text">Product Designer</p>
           </li>
-          <li>
+          <li class="list">
             <img
               src="images/photo-2.jpg"
               width="270"
               alt="Фото фронтенд розробниці Ольги Рєпіної"
             />
-            <h3 class="heading-team">Ольга Рєпіна</h3>
-            <p class="text-team">Frontend Developer</p>
+            <h3 class="team-heading">Ольга Рєпіна</h3>
+            <p class="team-text">Frontend Developer</p>
           </li>
-          <li>
+          <li class="list">
             <img
               src="images/photo-3.jpg"
               width="270"
               alt="Фото маркетолога Миколи Тарасова"
             />
-            <h3 class="heading-team">Микола Тарасов</h3>
-            <p class="text-team">Marketing</p>
+            <h3 class="team-heading">Микола Тарасов</h3>
+            <p class="team-text">Marketing</p>
           </li>
-          <li>
+          <li class="list">
             <img
               src="images/photo-4.jpg"
               width="270"
               alt="Фото дизайнера Михайла Єрмакова"
             />
-            <h3 class="heading-team">Михайло Єрмаков</h3>
-            <p class="text-team">UI Designer</p>
+            <h3 class="team-heading">Михайло Єрмаков</h3>
+            <p class="team-text">UI Designer</p>
           </li>
         </ul>
       </section>
@@ -148,17 +152,17 @@
       >
       <address>
         <ul>
-          <li>
+          <li class="list">
             <a class="address" href="https://goo.gl/maps/mu8JCDVC7BkaN3t28"
               >м. Київ, пр-т Лесі Українки, 26</a
             >
           </li>
-          <li>
+          <li class="list">
             <a class="address-additional" href="mailto:info@devstudio.com"
               >info@devstudio.com</a
             >
           </li>
-          <li>
+          <li class="list">
             <a class="address-additional" href="tel:+380961111111"
               >+380961111111</a
             >
