--- a/portfolio.html
+++ b/portfolio.html
@@ -19,108 +19,125 @@
       <nav>
         <a href="#" class="logo"><span class="logo-web">Web</span>Studio</a>
         <ul>
-          <li><a href="index.html" class="nav-item header-item">Студія</a></li>
-          <li>
+          <li class="list">
+            <a href="index.html" class="nav-item header-item">Студія</a>
+          </li>
+          <li class="list">
             <a href="portfolio.html" class="nav-item header-item">Портфоліо</a>
           </li>
-          <li><a href="#" class="nav-item header-item">Контакти</a></li>
+          <li class="list">
+            <a href="#" class="nav-item header-item">Контакти</a>
+          </li>
         </ul>
       </nav>
       <ul>
-        <li>
+        <li class="list">
           <a href="mailto:info@devstudio.com" class="header-item"
             >info@devstudio.com</a
           >
         </li>
-        <li>
+        <li class="list">
           <a href="tel:+380961111111" class="header-item">+380961111111</a>
         </li>
       </ul>
     </header>
     <main class="main-section">
-      <ul class="filter-list">
-        <li><button type="button" class="filter-button">Усі</button></li>
-        <li><button type="button" class="filter-button">Веб-сайти</button></li>
-        <li><button type="button" class="filter-button">Додатки</button></li>
-        <li><button type="button" class="filter-button">Дизайн</button></li>
-        <li><button type="button" class="filter-button">Маркетинг</button></li>
-      </ul>
+      <section>
+        <h1></h1>
+        <ul class="filter-list">
+          <li class="list">
+            <button type="button" class="filter-button">Усі</button>
+          </li>
+          <li class="list">
+            <button type="button" class="filter-button">Веб-сайти</button>
+          </li>
+          <li class="list">
+            <button type="button" class="filter-button">Додатки</button>
+          </li>
+          <li class="list">
+            <button type="button" class="filter-button">Дизайн</button>
+          </li>
+          <li class="list">
+            <button type="button" class="filter-button">Маркетинг</button>
+          </li>
+        </ul>
 
-      <ul>
-        <li class="portfolio-item">
-          <img
-            src="images/project-1.jpg"
-            width="370"
-            alt="A laptop with an open project"
-          />
-          <h3 class="heading-portfolio">Технокряк</h3>
-          <p class="text-portfolio">Веб-сайт</p>
-        </li>
-        <li class="portfolio-item">
-          <img
-            src="images/project-2.jpg"
-            width="370"
-            alt="A poster with basketbolists"
-          />
-          <h3 class="heading-portfolio">Постер New Orlean vs Golden Star</h3>
-          <p class="text-portfolio">Дизайн</p>
-        </li>
-        <li class="portfolio-item">
-          <img
-            src="images/project-3.jpg"
-            width="370"
-            alt="Seafood restaurant logo"
-          />
-          <h3 class="heading-portfolio">Ресторан Seafood</h3>
-          <p class="text-portfolio">Додаток</p>
-        </li>
-        <li class="portfolio-item">
-          <img src="images/project-4.jpg" width="370" alt="Heaphones" />
-          <h3 class="heading-portfolio">Проєкт Prime</h3>
-          <p class="text-portfolio">Маркетинг</p>
-        </li>
-        <li class="portfolio-item">
-          <img
-            src="images/project-5.jpg"
-            width="370"
-            alt="Two boxes of different sizes"
-          />
-          <h3 class="heading-portfolio">Проєкт Boxes</h3>
-          <p class="text-portfolio">Додаток</p>
-        </li>
-        <li class="portfolio-item">
-          <img
-            src="images/project-6.jpg"
-            width="370"
-            alt="A PC screen with an open project"
-          />
-          <h3 class="heading-portfolio">Inspiration has no Borders</h3>
-          <p class="text-portfolio">Веб-сайт</p>
-        </li>
-        <li class="portfolio-item">
-          <img
-            src="images/project-7.jpg"
-            width="370"
-            alt="An open copy of Limited Edition magazine"
-          />
-          <h3 class="heading-portfolio">Видання Limited Edition</h3>
-          <p class="text-portfolio">Дизайн</p>
-        </li>
-        <li class="portfolio-item">
-          <img src="images/project-8.jpg" width="370" alt="LAB logo" />
-          <h3 class="heading-portfolio">Проєкт LAB</h3>
-          <p class="text-portfolio">Маркетинг</p>
-        </li>
-        <li class="portfolio-item">
-          <img
-            src="images/project-9.jpg"
-            width="370"
-            alt="An open laptop with the hands of man working on it"
-          />
-          <h3 class="heading-portfolio">Growing Business</h3>
-          <p class="text-portfolio">Додаток</p>
-        </li>
-      </ul>
+        <ul>
+          <li class="portfolio-item list">
+            <img
+              src="images/project-1.jpg"
+              width="370"
+              alt="A laptop with an open project"
+            />
+            <h2 class="portfolio-heading">Технокряк</h2>
+            <p class="portfolio-text">Веб-сайт</p>
+          </li>
+          <li class="portfolio-item list">
+            <img
+              src="images/project-2.jpg"
+              width="370"
+              alt="A poster with basketbolists"
+            />
+            <h2 class="portfolio-heading">Постер New Orlean vs Golden Star</h2>
+            <p class="portfolio-text">Дизайн</p>
+          </li>
+          <li class="portfolio-item list">
+            <img
+              src="images/project-3.jpg"
+              width="370"
+              alt="Seafood restaurant logo"
+            />
+            <h2 class="portfolio-heading">Ресторан Seafood</h2>
+            <p class="portfolio-text">Додаток</p>
+          </li>
+          <li class="portfolio-item list">
+            <img src="images/project-4.jpg" width="370" alt="Heaphones" />
+            <h2 class="portfolio-heading">Проєкт Prime</h2>
+            <p class="portfolio-text">Маркетинг</p>
+          </li>
+          <li class="portfolio-item list">
+            <img
+              src="images/project-5.jpg"
+              width="370"
+              alt="Two boxes of different sizes"
+            />
+            <h2 class="portfolio-heading">Проєкт Boxes</h2>
+            <p class="portfolio-text">Додаток</p>
+          </li>
+          <li class="portfolio-item list">
+            <img
+              src="images/project-6.jpg"
+              width="370"
+              alt="A PC screen with an open project"
+            />
+            <h2 class="portfolio-heading">Inspiration has no Borders</h2>
+            <p class="portfolio-text">Веб-сайт</p>
+          </li>
+          <li class="portfolio-item list">
+            <img
+              src="images/project-7.jpg"
+              width="370"
+              alt="An open copy of Limited Edition magazine"
+            />
+            <h2 class="portfolio-heading">Видання Limited Edition</h2>
+            <p class="portfolio-text">Дизайн</p>
+          </li>
+          <li class="portfolio-item list">
+            <img src="images/project-8.jpg" width="370" alt="LAB logo" />
+            <h2 class="portfolio-heading">Проєкт LAB</h2>
+            <p class="portfolio-text">Маркетинг</p>
+          </li>
+          <li class="portfolio-item list">
+            <img
+              src="images/project-9.jpg"
+              width="370"
+              alt="An open laptop with the hands of man working on it"
+            />
+            <h2 class="portfolio-heading">Growing Business</h2>
+            <p class="portfolio-text">Додаток</p>
+          </li>
+        </ul>
+      </section>
     </main>
     <footer class="footer">
       <a href="#" class="logo"
@@ -129,17 +146,17 @@
       >
       <address>
         <ul>
-          <li>
+          <li class="list">
             <a class="address" href="https://goo.gl/maps/mu8JCDVC7BkaN3t28"
               >м. Київ, пр-т Лесі Українки, 26</a
             >
           </li>
-          <li>
+          <li class="list">
             <a class="address-additional" href="mailto:info@devstudio.com"
               >info@devstudio.com</a
             >
           </li>
-          <li>
+          <li class="list">
             <a class="address-additional" href="tel:+380961111111"
               >+380961111111</a
             >
@@ -149,3 +166,4 @@
     </footer>
   </body>
 </html>
+
