--- a/portfolio.html
+++ b/portfolio.html
@@ -43,7 +43,7 @@
     </header>
     <main class="main-section">
       <section>
-        <h1></h1>
+        <h1>Наші проекти</h1>
         <ul class="filter-list">
           <li class="list">
             <button type="button" class="filter-button">Усі</button>
